[tool.poetry]
name = "aotycount"
version = "0.1.0"
description = ""
authors = ["Ed Summers <ehs@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
